# webdoc-downloader

./: .gitignore  LICENSE  pyproject.toml
webdoc_downloader/: cli.py  downloader.py  exceptions.py  models.py  utils.py
