[tool.poetry]
name = "webdoc-downloader"
version = "0.1.0"
description = "A Python library for downloading documents from web pages"
authors = ["rajeev ramani <rajeev.ramani@gmail.com>"]
readme = "README.md"
license = "MIT"



[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
typer = "^0.15.1"
bs4 = "^0.0.2"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
responses = "^0.25.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
